--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>初めてのgitとgithub</h1>
     <p>今日からgitを使います。<br>githubにファイルをアップして見ます。</p>
+    <h2>2回目のコミットではローカルリポジトリの更新状況と、リモートの更新状況を確認します。</h2>
 </body>
 </html>
