--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>初めてのgitとgithub</h1>
     <p>今日からgitを使います。<br>githubにファイルをアップして見ます。</p>
     <h2>2回目のコミットではローカルリポジトリの更新状況と、リモートの更新状況を確認します。</h2>
+    <h2>3回目の更新</h2>
 </body>
 </html>
